crates/php-parser/tests/snapshots/integration__instanceof.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php $obj instanceof Foo; $x instanceof Bar || $x instanceof Baz;
=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Variable": "obj"
                },
                "span": {
                  "start": 6,
                  "end": 10
                }
              },
              "op": "Instanceof",
              "right": {
                "kind": {
                  "Identifier": "Foo"
                },
                "span": {
                  "start": 22,
                  "end": 25
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 25
          }
        }
      },
      "span": {
        "start": 6,
        "end": 27
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Binary": {
              "left": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "x"
                      },
                      "span": {
                        "start": 27,
                        "end": 29
                      }
                    },
                    "op": "Instanceof",
                    "right": {
                      "kind": {
                        "Identifier": "Bar"
                      },
                      "span": {
                        "start": 41,
                        "end": 44
                      }
                    }
                  }
                },
                "span": {
                  "start": 27,
                  "end": 44
                }
              },
              "op": "BooleanOr",
              "right": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "x"
                      },
                      "span": {
                        "start": 48,
                        "end": 50
                      }
                    },
                    "op": "Instanceof",
                    "right": {
                      "kind": {
                        "Identifier": "Baz"
                      },
                      "span": {
                        "start": 62,
                        "end": 65
                      }
                    }
                  }
                },
                "span": {
                  "start": 48,
                  "end": 65
                }
              }
            }
          },
          "span": {
            "start": 27,
            "end": 65
          }
        }
      },
      "span": {
        "start": 27,
        "end": 66
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 66
  }
}
