crates/php-parser/tests/snapshots/integration__instanceof_dynamic.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
$a = $obj instanceof $className;
$b = $obj instanceof self;
$c = $obj instanceof parent;
$d = $obj instanceof static;

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "a"
                },
                "span": {
                  "start": 6,
                  "end": 8
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "obj"
                      },
                      "span": {
                        "start": 11,
                        "end": 15
                      }
                    },
                    "op": "Instanceof",
                    "right": {
                      "kind": {
                        "Variable": "className"
                      },
                      "span": {
                        "start": 27,
                        "end": 37
                      }
                    }
                  }
                },
                "span": {
                  "start": 11,
                  "end": 37
                }
              }
            }
          },
          "span": {
            "start": 6,
            "end": 37
          }
        }
      },
      "span": {
        "start": 6,
        "end": 39
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "b"
                },
                "span": {
                  "start": 39,
                  "end": 41
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "obj"
                      },
                      "span": {
                        "start": 44,
                        "end": 48
                      }
                    },
                    "op": "Instanceof",
                    "right": {
                      "kind": {
                        "Identifier": "self"
                      },
                      "span": {
                        "start": 60,
                        "end": 64
                      }
                    }
                  }
                },
                "span": {
                  "start": 44,
                  "end": 64
                }
              }
            }
          },
          "span": {
            "start": 39,
            "end": 64
          }
        }
      },
      "span": {
        "start": 39,
        "end": 66
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "c"
                },
                "span": {
                  "start": 66,
                  "end": 68
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "obj"
                      },
                      "span": {
                        "start": 71,
                        "end": 75
                      }
                    },
                    "op": "Instanceof",
                    "right": {
                      "kind": {
                        "Identifier": "parent"
                      },
                      "span": {
                        "start": 87,
                        "end": 93
                      }
                    }
                  }
                },
                "span": {
                  "start": 71,
                  "end": 93
                }
              }
            }
          },
          "span": {
            "start": 66,
            "end": 93
          }
        }
      },
      "span": {
        "start": 66,
        "end": 95
      }
    },
    {
      "kind": {
        "Expression": {
          "kind": {
            "Assign": {
              "target": {
                "kind": {
                  "Variable": "d"
                },
                "span": {
                  "start": 95,
                  "end": 97
                }
              },
              "op": "Assign",
              "value": {
                "kind": {
                  "Binary": {
                    "left": {
                      "kind": {
                        "Variable": "obj"
                      },
                      "span": {
                        "start": 100,
                        "end": 104
                      }
                    },
                    "op": "Instanceof",
                    "right": {
                      "kind": {
                        "Identifier": "static"
                      },
                      "span": {
                        "start": 116,
                        "end": 122
                      }
                    }
                  }
                },
                "span": {
                  "start": 100,
                  "end": 122
                }
              }
            }
          },
          "span": {
            "start": 95,
            "end": 122
          }
        }
      },
      "span": {
        "start": 95,
        "end": 124
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 124
  }
}
