crates/php-parser/tests/snapshots/integration__interface.snap
---
source: crates/php-parser/tests/integration.rs
expression: "fixture(source, &result.program)"
---
=== source ===
<?php
interface HasId {
    public function getId(): int;
}
interface HasName extends HasId {
    public function getName(): string;
}

=== snapshot ===
{
  "stmts": [
    {
      "kind": {
        "Interface": {
          "name": "HasId",
          "extends": [],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "getId",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "int"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 53,
                          "end": 56
                        }
                      }
                    },
                    "span": {
                      "start": 53,
                      "end": 56
                    }
                  },
                  "body": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 28,
                "end": 58
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 6,
        "end": 59
      }
    },
    {
      "kind": {
        "Interface": {
          "name": "HasName",
          "extends": [
            {
              "parts": [
                "HasId"
              ],
              "kind": "Unqualified",
              "span": {
                "start": 86,
                "end": 92
              }
            }
          ],
          "members": [
            {
              "kind": {
                "Method": {
                  "name": "getName",
                  "visibility": "Public",
                  "is_static": false,
                  "is_abstract": false,
                  "is_final": false,
                  "by_ref": false,
                  "params": [],
                  "return_type": {
                    "kind": {
                      "Named": {
                        "parts": [
                          "string"
                        ],
                        "kind": "Unqualified",
                        "span": {
                          "start": 125,
                          "end": 131
                        }
                      }
                    },
                    "span": {
                      "start": 125,
                      "end": 131
                    }
                  },
                  "body": null,
                  "attributes": []
                }
              },
              "span": {
                "start": 98,
                "end": 133
              }
            }
          ],
          "attributes": []
        }
      },
      "span": {
        "start": 60,
        "end": 134
      }
    }
  ],
  "span": {
    "start": 0,
    "end": 134
  }
}
